[tool.poetry]
name = "release_often"
version = "0.3.0"
description = "GitHub Action for releasing a Python project to PyPI after every relevant, merged PR"
authors = ["Brett Cannon <brett@python.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

gidgethub = "^4.0"  # Really want 'gidgethub[httpx]', but Poetry doesn't support extras.
httpx = ">=0.12.1"
packaging = "^20.3"
pep517 = "^0.8.1"
tomlkit = "^0.5.11"
trio = "^0.13.0"
twine = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
